<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundGrey">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/cart_list_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/cart_checkout_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cart_empty_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_cart_is_empty"
        android:textSize="16sp"
        android:visibility="gone"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/cart_checkout_button"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/checkout_button_text"
        android:textColor="@color/buttonTextWhite"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</android.support.constraint.ConstraintLayout>